started write tests

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "viem": "^2.37.6"
   },
   "dependencies": {
-    "dotenv": "^17.2.2"
+    "chai": "^6.0.1",
+    "dotenv": "^17.2.2",
+    "mocha": "^11.7.2"
   }
 }
