--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require tsx --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -12,16 +12,18 @@
   "type": "module",
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^3.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
     "@types/node": "^24.5.2",
+    "chai": "^6.0.1",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.6",
+    "mocha": "^11.7.2",
     "typescript": "^5.9.2",
     "viem": "^2.37.6"
   },
   "dependencies": {
-    "chai": "^6.0.1",
     "dotenv": "^17.2.2",
-    "mocha": "^11.7.2"
+    "tsx": "^4.20.6"
   }
 }
